# Hello42

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
